<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_res"
            android:textSize="36sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/C" />

                <Button
                    android:id="@+id/calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/res" />

                <Button
                    android:id="@+id/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent" />

                <Button
                    android:id="@+id/div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperationEvent"
                    android:text="@string/div" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/mul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperationEvent"
                    android:text="@string/mul" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperationEvent"
                    android:text="@string/minus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperationEvent"
                    android:text="@string/plus" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/pi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickNumberEvent"
                    android:text="@string/pi" />

                <Button
                    android:id="@+id/sin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperationEvent"
                    android:text="@string/sin" />

                <Button
                    android:id="@+id/cos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickOperationEvent"
                    android:text="@string/cos" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>